fix rubber band scrolling on Iphone

--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -1,15 +1,16 @@
 .container404 {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  -webkit-overflow-scrolling: touch;
+}
